# Rust-Learning

./: .env  .env.example  .gitignore  Cargo.toml  ENVIRONMENTS.md  LOCAL_EXECUTION.md  README.md  docker-compose.yml  hoja_de_ruta.md  locustfile.py
.cargo/: config.toml
.devcontainer/: devcontainer.json
deploy/: DEPLOYMENT.md  Dockerfile  README.md  fly.toml  grafana-dashboard.json  prometheus.yml
deploy/benchmark/: run_benchmark.sh
deploy/docker/: docker-compose.yml
deploy/k8s/: 00-namespace.yaml  01-secrets.yaml  02-configmap.yaml  03-postgres.yaml  04-redis.yaml  05-api-deployment.yaml  06-ingress.yaml  07-prometheus-rbac.yaml  07-prometheus.yaml  08-grafana.yaml  LOCAL_DEPLOYMENT.md  README.md  WORKFLOW.md  deploy-local.sh  redeploy.sh
examples/: hash_gen.rs
migrations/: 20231210190000_create_users_table.sql  20231210200000_create_dashboard_tables.sql  20231210213000_add_password_hash.sql  20250202000000_oauth_oidc_tables.sql
src/: auth.rs  cache.rs  db.rs  email.rs  error.rs  handlers.rs  health.rs  main.rs  metrics.rs  metrics_middleware.rs  middleware.rs  models.rs  oauth.rs  rate_limit.rs
src/builders/: mod.rs  user_builder.rs
src/templates/: consent.html  login.html  mod.rs
