[package]
name = "hello_world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
axum-extra = { version = "0.9", features = ["typed-header", "cookie"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }
prometheus = "0.13"
lazy_static = "1.4"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
base64 = "0.22"
tower-cookies = "0.9"
rsa = { version = "0.9", features = ["pem", "sha2"] }
base64ct = { version = "1.6", features = ["alloc"] }
time = "0.3"
urlencoding = "2.1"
